# cpp_starter

./: CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml
src/: CMakeLists.txt  Module1.hpp  main.cpp
tests/: CMakeLists.txt  Module1Tests.cpp
